[package]
name = "microrust-start"
version = "1.0.0"
authors = ["Roman Frołow <rofrol@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
microbit = "0.8.0"
panic-halt = "0.2.0"
cortex-m-rt = "0.6.11"
cortex-m-semihosting = "0.3.5"
